@@ -7,16 +7,21 @@ export JSQSH_CSV="-n -v headers=false -v footers=false"
 jdbc_root_cli() { 
   local LOC="${1:-src}" # SRC|DST
   local db_host=$( x="${LOC^^}DB_HOST"; echo "${!x}" )
-  local db_user=$( x="${LOC^^}DB_ROOT"; echo "${!x}" )
-  local db_pw=$( x="${LOC^^}DB_PW"; echo "${!x}" )
+  local db_user=$( x="${LOC^^}DB_ARC_USER"; echo "${!x}" )
+  local db_pw=$( x="${LOC^^}DB_ARC_PW"; echo "${!x}" )
+  local db_root_user=$( x="${LOC^^}DB_ROOT"; echo "${!x}" )
+  local db_root_pw=$( x="${LOC^^}DB_PW"; echo "${!x}" )
   local db_port=$( x="${LOC^^}DB_PORT"; echo "${!x}" )
   local jsqsh_driver=$( x="${LOC^^}DB_JSQSH_DRIVER"; echo "${!x}" )
   local db_db=$( x="${LOC^^}DB_DB"; echo "${!x}" )
   local db_sid=$( x="${LOC^^}DB_SID"; echo "${!x}" )
   local db_grp=$( x="${LOC^^}DB_GRP"; echo "${!x}" )
+  local db_root_db=$( x="${LOC^^}DB_ROOT_DB"; echo "${!x}" )
   shift
 
   db_db=${db_db:-${db_user}}
+  db_root_user=${db_root_user:-${db_user}}
+  db_root_pw=${db_root_pw:-${db_pw}}
 
   # Not used but maybe helpful later
   # if the flag as '-n meaning batch mode'
@@ -24,13 +29,16 @@ jdbc_root_cli() {
   # 
   case "${db_grp,,}" in
     snowflake)
-  jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" -V "db=${db_db}" -V "warehouse=$( x="SNOW_${LOC^^}_WAREHOUSE"; echo "${!x}" )"
+  JSQSH_JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED" jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_root_user}" --password="${db_root_pw}" --server="${db_host}" --port="${db_port}" -V "db=${db_db}" -V "warehouse=$( x="SNOW_${LOC^^}_WAREHOUSE"; echo "${!x}" )"
     ;;
     oracle)
-  jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" --database="${db_sid}"
+  JSQSH_JAVA_OPTS="-Doracle.jdbc.timezoneAsRegion=false" jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_root_user}" --password="${db_root_pw}" --server="${db_host}" --port="${db_port}" --database="${db_sid}"
     ;;    
+    postgresql | db2)
+  jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_root_user}" --password="${db_root_pw}" --server="${db_host}" --port="${db_port}" --database=${db_root_db}
+    ;;
     *)
-  jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" --database="${db_db}"
+  jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_root_user}" --password="${db_root_pw}" --server="${db_host}" --port="${db_port}"
     ;;
   esac  
 }
@@ -52,6 +60,7 @@ jdbc_cli() {
   local db_port=$( x="${LOC^^}DB_PORT"; echo "${!x}" )
   local jsqsh_driver=$( x="${LOC^^}DB_JSQSH_DRIVER"; echo "${!x}" )
   local db_db=$( x="${LOC^^}DB_DB"; echo "${!x}" )
+  local db_schema=$( x="${LOC^^}DB_SCHEMA"; echo "${!x}" )
   local db_sid=$( x="${LOC^^}DB_SID"; echo "${!x}" )
   local db_grp=$( x="${LOC^^}DB_GRP"; echo "${!x}" )
   shift
@@ -64,10 +73,10 @@ jdbc_cli() {
   # 
   case "${db_grp,,}" in
     snowflake)
-  jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" -V "db=${db_db}" -V "warehouse=$( x="SNOW_${LOC^^}_WAREHOUSE"; echo "${!x}" )"
+  JSQSH_JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED" jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" --database ${db_db} -V "warehouse=$( x="SNOW_${LOC^^}_WAREHOUSE"; echo "${!x}" )"
     ;;
     oracle)
-  jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" --database="${db_sid}"
+  JSQSH_JAVA_OPTS="-Doracle.jdbc.timezoneAsRegion=false" jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" --database="${db_sid}"
     ;;    
     *)
   jsqsh ${1} --driver="${jsqsh_driver}" --user="${db_user}" --password="${db_pw}" --server="${db_host}" --port="${db_port}" --database="${db_db}"
@@ -112,6 +121,11 @@ list_dbs() {
     local DB_SCHEMA=$( x="${LOC^^}DB_SCHEMA"; echo ${!x} )
     local DB_SQL="SELECT trim(table_schema), count(*) from SYSIBM.tables where table_schema='${DB_SCHEMA}' and table_type='BASE TABLE' group by table_schema;"
         ;;          
+        snowflake)
+    local DB_CATALOG=$( x="${LOC^^}DB_DB"; echo ${!x} )
+    local DB_SCHEMA=$( x="${LOC^^}DB_SCHEMA"; echo ${!x} )
+    local DB_SQL="SELECT table_catalog, count(*) FROM ${DB_CATALOG}.information_schema.tables where table_schema = '${DB_SCHEMA}' group by table_catalog, table_schema order by 1,2;"
+        ;;
     *)
         echo "jdbc_cli: ${DB_GRP,,} needs to be handled." >&2
         ;;
@@ -150,8 +164,13 @@ list_tables() {
         db2)
     local DB_SCHEMA=$( x="${LOC^^}DB_SCHEMA"; echo ${!x} )
     local DB_SQL="SELECT 'TABLE', table_name from SYSIBM.tables where table_schema='${DB_SCHEMA}' and table_type='BASE TABLE';"
-        ;;    
-    *)
+        ;;           
+        snowflake)
+    local DB_CATALOG=$( x="${LOC^^}DB_DB"; echo ${!x} )
+    local DB_SCHEMA=$( x="${LOC^^}DB_SCHEMA"; echo ${!x} )
+    local DB_SQL="SELECT table_type, table_name FROM ${DB_CATALOG}.information_schema.tables where table_type in ('BASE TABLE','VIEW') and table_schema='${DB_SCHEMA}' and table_catalog='${DB_CATALOG}' order by table_name;"
+        ;;
+        *)
         echo "jdbc_cli: ${DB_GRP,,} needs to be handled." >&2
         ;;
     esac
